--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,9 +12,9 @@
       "libraries/angular.min.js",
       "libraries/async.js",
       "libraries/jquery.js",
-      "scripts/Bitport.js",
+      "scripts/bitport.js",
+			"scripts/bitport-spec.js",
       "scripts/chromereload.js",
-      "scripts/app.js",
       "scripts/background.js"
     ],
     "persistent": true
