Change callbacks to use promises

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -9,11 +9,10 @@
   },
   "background": {
     "scripts": [
-      "libraries/angular.min.js",
       "libraries/async.js",
       "libraries/jquery.js",
       "scripts/bitport.js",
-			"scripts/bitport-spec.js",
+			//"scripts/bitport-spec.js",
       "scripts/chromereload.js",
       "scripts/background.js"
     ],
