Add a icon. Add tests for error conditions. Refactored code to be more testable

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,7 +12,7 @@
       "libraries/async.js",
       "libraries/jquery.js",
       "scripts/bitport.js",
-			//"scripts/bitport-spec.js",
+			"scripts/bitport-spec.js",
 			"scripts/context.js",
       "scripts/chromereload.js",
       "scripts/background.js"
