--- a/app/manifest.json
+++ b/app/manifest.json
@@ -23,6 +23,9 @@
     "default_icon": "images/icon-19.png",
     "default_popup":"popup.html"
   },
-  "permissions":["https://*/","contextMenus"],
+	"web_accessible_resources": [
+    "images/icon-48.png"
+  ],
+  "permissions":["https://*/","contextMenus", "notifications"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
